---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: ??.??.2024
  Internal:
    - Now keeping track of how long players spend on each surface.
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 29.03.2024
  Bugfixes:
    - Fixed regression that might cause victory to be triggered multiple times by removing a faulty migration script.  
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 28.03.2024
  Features:
    - Now shows "Distance jetpacked" in victory screen. (Was previously counted as "walking")
  Bugfixes:
    - Correctly handle rare case where mod disabling victory condition is removed (Thanks Nordblum!).
  Localization:
    - Update translations from Crowdin.
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 06.02.2024
  Changes:
    - Slightly change formatting of distance numbers.
    - Change "Ores produced" to "Ores mined".
  Bugfixes:
    - Teleporting the player is no longer counted as walking distance. Acrued walking distances over
      10000km is reset to zero in an attempt to fix bad statistics to something more reasonable.
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 05.02.2024
  Features:
    - Now show 'Ores produced' in victory screen.
  Changes:
    - Change table style to more closely match vanilla (#3 by _CodeGreen)
  Compatibility:
    - Added soft compatibility with Satisfactorio.
    - Now compatible with the mod Ballistic Missile.
  Localization:
    - Update translations from Crowdin.
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 31.01.2024
  Changes: