@@ -34,6 +34,8 @@ handcrafting-time=Time spent handcrafting
 # 'bvs-stats' - Compatibility section
 # Cargo Ships
 waterways=Waterways
+# Lunar Landings
+ll-luna-time=Time spent on Luna
 
 [bvs-stat-tooltip]
 total-enemy-kills=Total amount of unit and spawner kills by your force.
