@@ -2,7 +2,9 @@
 Version: 0.3.0
 Date: ??.??.2024
   Internal:
-    - Now keeping track of how long players spend on each surface.
+    - Keep track of how long players spend on each surface.
+  Changes:
+    - Show total time spent on Luna when Lunar Landings is installed.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.14
 Date: 29.03.2024
